# eagletrtRecruitment

./: .gitignore  CMakeLists.txt  Documentazione.txt  README.md  main.cpp
include/: color_detection.hpp  color_filter.hpp  cone_detection.hpp  odometry.hpp
src/: color_detection.cpp  color_filter.cpp  cone_detection.cpp  main.cpp  odometry.cpp
